// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table tests should render Table correctly 1`] = `
<DocumentFragment>
  .c3 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
}

.c5 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  font-weight: 400;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #000000;
}

.c8 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c9 {
  color: #000000;
  font-size: 1.5rem;
}

.c7 {
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2rem;
  width: 2rem;
}

.c7 .material-symbols-sharp {
  color: inherit;
}

.c7:hover {
  background-color: #EEEEEE;
}

.c7:active {
  background-color: #E2E2E2;
}

.c0 {
  background-color: #F6F6F6;
  padding: 1.25rem;
  border-radius: 4px;
}

.c1 {
  display: grid;
  grid-template-columns: repeat(3, 1fr) 36px;
  grid-gap: 1.25rem;
}

.c1:not(:last-child) {
  border-bottom: 1px solid #E2E2E2;
}

.c2 {
  height: 2.8125rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.c4 {
  display: flex;
  align-items: center;
}

.c6 {
  height: 2rem;
  width: 2rem;
}

<div
    class="c0"
    data-testid="table"
  >
    <div
      class="c1"
      data-testid="header"
    >
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Key
        </p>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Environment
        </p>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Description
        </p>
      </div>
    </div>
    <div
      class="c1"
      data-testid="row"
    >
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c5"
            font-family="roboto"
            font-weight="400"
          >
            key_dev_8299aa6b
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c5"
            font-family="roboto"
            font-weight="400"
          >
            development
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c5"
            font-family="roboto"
            font-weight="400"
          >
            development SDK
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c6"
        >
          <button
            class="c7"
          >
            <div
              class="c8"
              data-testid="icon-container"
              size="24"
            >
              <span
                class="c9 material-symbols-sharp"
                color="#000000"
                data-testid="icon"
                size="24"
              >
                more_horiz
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="c1"
      data-testid="row"
    >
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c5"
            font-family="roboto"
            font-weight="400"
          >
            key_dev_8299aa6b
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c5"
            font-family="roboto"
            font-weight="400"
          >
            development
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c5"
            font-family="roboto"
            font-weight="400"
          >
            development SDK
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c6"
        >
          <button
            class="c7"
          >
            <div
              class="c8"
              data-testid="icon-container"
              size="24"
            >
              <span
                class="c9 material-symbols-sharp"
                color="#000000"
                data-testid="icon"
                size="24"
              >
                more_horiz
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table tests should render Table with images 1`] = `
<DocumentFragment>
  .c3 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
}

.c7 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  font-weight: 400;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #000000;
}

.c10 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c11 {
  color: #000000;
  font-size: 1.5rem;
}

.c9 {
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2rem;
  width: 2rem;
}

.c9 .material-symbols-sharp {
  color: inherit;
}

.c9:hover {
  background-color: #EEEEEE;
}

.c9:active {
  background-color: #E2E2E2;
}

.c5 {
  height: 2.25rem;
  width: 2.25rem;
  border-radius: 50%;
  overflow: hidden;
  flex-shrink: 0;
  margin-right: 0.75rem;
  border-radius: 50%;
}

.c6 {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.c0 {
  background-color: #F6F6F6;
  padding: 1.25rem;
  border-radius: 4px;
}

.c1 {
  display: grid;
  grid-template-columns: repeat(3, 1fr) 36px;
  grid-gap: 1.25rem;
}

.c1:not(:last-child) {
  border-bottom: 1px solid #E2E2E2;
}

.c2 {
  height: 2.8125rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.c4 {
  display: flex;
  align-items: center;
}

.c8 {
  height: 2rem;
  width: 2rem;
}

<div
    class="c0"
    data-testid="table"
  >
    <div
      class="c1"
      data-testid="header"
    >
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Name
        </p>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Email
        </p>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Role
        </p>
      </div>
    </div>
    <div
      class="c1"
      data-testid="row"
    >
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
            data-testid="avatar"
            size="36"
          >
            <img
              alt="Jack profile image"
              class="c6"
              src="https://api.dicebear.com/7.x/initials/svg?seed=Jack&size=36&fontSize=40"
            />
          </div>
          <p
            class="c7"
            font-family="roboto"
            font-weight="400"
          >
            Jack
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c7"
            font-family="roboto"
            font-weight="400"
          >
            jack@gmail.com
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c7"
            font-family="roboto"
            font-weight="400"
          >
            Admin
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c8"
        >
          <button
            class="c9"
          >
            <div
              class="c10"
              data-testid="icon-container"
              size="24"
            >
              <span
                class="c11 material-symbols-sharp"
                color="#000000"
                data-testid="icon"
                size="24"
              >
                more_horiz
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="c1"
      data-testid="row"
    >
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
            data-testid="avatar"
            size="36"
          >
            <img
              alt="Pedro profile image"
              class="c6"
              src="https://api.dicebear.com/7.x/initials/svg?seed=Pedro&size=36&fontSize=40"
            />
          </div>
          <p
            class="c7"
            font-family="roboto"
            font-weight="400"
          >
            Pedro
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c7"
            font-family="roboto"
            font-weight="400"
          >
            pedro_dev@gmail.com
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c7"
            font-family="roboto"
            font-weight="400"
          >
            developer
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c8"
        >
          <button
            class="c9"
          >
            <div
              class="c10"
              data-testid="icon-container"
              size="24"
            >
              <span
                class="c11 material-symbols-sharp"
                color="#000000"
                data-testid="icon"
                size="24"
              >
                more_horiz
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="c1"
      data-testid="row"
    >
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
            data-testid="avatar"
            size="36"
          >
            <img
              alt="Daniel profile image"
              class="c6"
              src="https://api.dicebear.com/7.x/initials/svg?seed=Daniel&size=36&fontSize=40"
            />
          </div>
          <p
            class="c7"
            font-family="roboto"
            font-weight="400"
          >
            Daniel
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c7"
            font-family="roboto"
            font-weight="400"
          >
            daniel_ninja_dev@gmail.com
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c7"
            font-family="roboto"
            font-weight="400"
          >
            developer
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c8"
        >
          <button
            class="c9"
          >
            <div
              class="c10"
              data-testid="icon-container"
              size="24"
            >
              <span
                class="c11 material-symbols-sharp"
                color="#000000"
                data-testid="icon"
                size="24"
              >
                more_horiz
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="c1"
      data-testid="row"
    >
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
            data-testid="avatar"
            size="36"
          >
            <img
              alt="Joana profile image"
              class="c6"
              src="https://api.dicebear.com/7.x/initials/svg?seed=Joana&size=36&fontSize=40"
            />
          </div>
          <p
            class="c7"
            font-family="roboto"
            font-weight="400"
          >
            Joana
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c7"
            font-family="roboto"
            font-weight="400"
          >
            joana_mac@gmail.com
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c7"
            font-family="roboto"
            font-weight="400"
          >
            QA
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c8"
        >
          <button
            class="c9"
          >
            <div
              class="c10"
              data-testid="icon-container"
              size="24"
            >
              <span
                class="c11 material-symbols-sharp"
                color="#000000"
                data-testid="icon"
                size="24"
              >
                more_horiz
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table tests should render Table with space utils 1`] = `
<DocumentFragment>
  .c3 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #757575;
}

.c5 {
  font-size: 0.875rem;
  line-height: 1.375rem;
  font-weight: 400;
  font-family: roboto;
  font-weight: 400;
  font-family: 'Roboto',sans-serif;
  word-break: break-word;
  color: #000000;
}

.c8 {
  height: 1.5rem;
  width: 1.5rem;
  flex-shrink: 0;
}

.c9 {
  color: #000000;
  font-size: 1.5rem;
}

.c7 {
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out,border-color 0.1s ease-in-out;
  background-color: transparent;
  color: #000000;
  height: 2rem;
  width: 2rem;
}

.c7 .material-symbols-sharp {
  color: inherit;
}

.c7:hover {
  background-color: #EEEEEE;
}

.c7:active {
  background-color: #E2E2E2;
}

.c0 {
  margin-top: 30px;
  background-color: #F6F6F6;
  padding: 1.25rem;
  border-radius: 4px;
}

.c1 {
  display: grid;
  grid-template-columns: repeat(3, 1fr) 36px;
  grid-gap: 1.25rem;
}

.c1:not(:last-child) {
  border-bottom: 1px solid #E2E2E2;
}

.c2 {
  height: 2.8125rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.c4 {
  display: flex;
  align-items: center;
}

.c6 {
  height: 2rem;
  width: 2rem;
}

<div
    class="c0"
    data-testid="table"
  >
    <div
      class="c1"
      data-testid="header"
    >
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Key
        </p>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Environment
        </p>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
          font-family="roboto"
        >
          Description
        </p>
      </div>
    </div>
    <div
      class="c1"
      data-testid="row"
    >
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c5"
            font-family="roboto"
            font-weight="400"
          >
            key_dev_8299aa6b
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c5"
            font-family="roboto"
            font-weight="400"
          >
            development
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c5"
            font-family="roboto"
            font-weight="400"
          >
            development SDK
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c6"
        >
          <button
            class="c7"
          >
            <div
              class="c8"
              data-testid="icon-container"
              size="24"
            >
              <span
                class="c9 material-symbols-sharp"
                color="#000000"
                data-testid="icon"
                size="24"
              >
                more_horiz
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="c1"
      data-testid="row"
    >
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c5"
            font-family="roboto"
            font-weight="400"
          >
            key_dev_8299aa6b
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c5"
            font-family="roboto"
            font-weight="400"
          >
            development
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c4"
        >
          <p
            class="c5"
            font-family="roboto"
            font-weight="400"
          >
            development SDK
          </p>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c6"
        >
          <button
            class="c7"
          >
            <div
              class="c8"
              data-testid="icon-container"
              size="24"
            >
              <span
                class="c9 material-symbols-sharp"
                color="#000000"
                data-testid="icon"
                size="24"
              >
                more_horiz
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
